    value of the Logtalk flag "prolog_dialect" from "qu" to "qp" in order
    to match the value of the new Prolog flag "dialect" implemented in
    Qu-Prolog 8.11. Added support for the "smart_compilation" compiler flag.
    Improved startup time when using the "qplgt.sh" integration script. 

    Corrected a typo in the template of the predicate subsumes/2 in the
    library protocol "termp".

    Added man pages for the POSIX "*lgt" Prolog integration shell scripts,
    for the Logtalk management shell scripts, and for the XML documenting
    files processing scripts.

    Renamed the "logtalk_select" shell script to "logtalk_version_select".
    Renamed the "cplgtdirs.*" scripts to "logtalk_user_setup.*".

    Improved the "examples/tester.sh" script in order to support running the
    example unit tests compiled in debug mode.

    Added a a simple maze search problem using a depth-first strategy with
    loop detection to the "benchmarks" example.

    Added missing support for syntax coloring of the "complements" entity
    relation to Pygments.


2.39.2 - May 4, 2010

    Changed the internal representation of most entity properties to use a
    more compact bit representation, stored in the tables of loaded entities.

    Changed the internal representation of non-critical predicate properties
    to use a more compact bit representation, which includes the "multifile"
    predicate property, stored in the tables of entity declared predicates.

    Changed the type of the built-in methods (\+)/1, call/N, once/1, catch/3,
    throw/1, bagof/3, findall/3, forall/2, setof/3, self/1, sender/1, this/1
    and parameter/2 from local predicates to private predicates. Corrected a
    bug in the predicate_property/2 built-in method where some of those built-
    in methods would be reported as public. These changes should only require
    updating any application code that explicitly expected the exception term