@@ -75,8 +75,8 @@ echo
 
 export LOGTALK_STARTUP_DIRECTORY=`pwd`
 
-if pl -t halt 2>&1 | grep "SWI-Prolog"; then
-	exec pl -s "$LOGTALKHOME/integration/logtalk_swi.pl" "$@"
-elif swipl -t halt 2>&1 | grep "SWI-Prolog"; then
+if swipl -t halt 2>&1 | grep "SWI-Prolog"; then
 	exec swipl -s "$LOGTALKHOME/integration/logtalk_swi.pl" "$@"
+elif pl -t halt 2>&1 | grep "SWI-Prolog"; then
+	exec pl -s "$LOGTALKHOME/integration/logtalk_swi.pl" "$@"
 fi
