@@ -18,7 +18,7 @@ swilgt \-- Logtalk integration script for SWI-Prolog
 Initialization goal, written between double quotes, to be executed after Logtalk startup.
 
 .SH REQUIREMENTS
-SWI-Prolog 5.8.0 or later is required. This integration script look first for "pl" SWI-Prolog executable and, if not found, tries "swipl".
+SWI-Prolog 5.8.0 or later is required. This integration script looks first for a "pl" SWI-Prolog executable and, if not found, tries "swipl".
 
 .SH ENVIRONMENT
 .TP
